# lazily-rs

./: .gitignore  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Makefile  PROTOCOL.md  README.md  RELEASE_NOTES_v0.11.0.md  RELEASE_NOTES_v0.11.1.md  RELEASE_NOTES_v0.12.0.md  RELEASE_NOTES_v0.12.1.md  RELEASE_NOTES_v0.12.2.md  RELEASE_NOTES_v0.14.0.md  RELEASE_NOTES_v0.15.0.md  RELEASE_NOTES_v0.16.0.md  RELEASE_NOTES_v0.17.0.md  RELEASE_NOTES_v0.18.0.md  RELEASE_NOTES_v0.22.0.md  RELEASE_NOTES_v0.22.1.md  RELEASE_NOTES_v0.22.2.md  RELEASE_NOTES_v0.25.0.md  RELEASE_NOTES_v0.31.0.md  RELEASE_NOTES_v0.41.0.md  RELEASE_NOTES_v0.42.0.md  RELEASE_NOTES_v0.43.0.md  RELEASE_NOTES_v0.44.0.md  RELEASE_NOTES_v0.45.0.md  RELEASE_NOTES_v0.48.0.md  RELEASE_NOTES_v0.48.1.md  SPEC.md  book.toml  cbindgen.toml
.github/workflows/: ci.yml  mdbook.yml  regressions.yml
benches/: async_context.rs  context.rs  ipc_transport.rs  profile.rs  revision_engine.rs  scale.rs  scale_compare.rs  tokio_sync.rs  webrtc_transport.rs  wire_optimizations.rs
docs/: BENCHMARKS.md  PROTOCOL.md  SPEC.md  SUMMARY.md  release-notes.md
examples/: actor_rpc.rs  child_context_spike.rs  edge_audit.rs  fanout_scaling.rs  instrumentation_profile.rs  node_memory_audit.rs  pubsub_load.rs  pubsub_load_thread_safe.rs  rc_handle_spike.rs  teardown_scope_spike.rs  tokio_sync.rs  webrtc_live_e2e.rs
macros/: Cargo.toml
macros/src/: lib.rs
proptest-regressions/: crdt.txt
scripts/: update-benchmark-results.py
signaling/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
signaling/src/: client.ts  env.ts  index.ts  permissions.ts  protocol.ts  room-core.ts  room.ts
signaling/test/: client-e2e.test.ts  client.test.ts  permissions.test.ts  protocol.test.ts  room-core.test.ts  worker.test.ts
src/: async_context.rs  async_reactive_family.rs  bridge.rs  cell.rs  cell_family.rs  cell_tree.rs  command.rs  context.rs  coordination.rs  crdt.rs  crdt_plane.rs  crdt_tree.rs  distributed.rs  effect.rs  ffi.rs  instrumentation.rs  ipc.rs  lib.rs  lossless_tree_crdt.rs  materialization.rs  membership.rs  merge.rs  outbox.rs  presence.rs  queue.rs  rateshape.rs  reactive_family.rs  reactive_graph.rs  receipt.rs  reconcile.rs  relay.rs  relay_policy.rs  relay_roles.rs  relay_transport.rs  reliable_sync.rs  resilience.rs  sem_tree.rs  seq_crdt.rs  service.rs  signal.rs  (+19 more)
tests/: async_integration.rs  async_resolve_loop.rs  async_state_machine.rs  async_stress.rs  collections_conformance.rs  command_conformance.rs  compute_fortification.rs  computed_ripple_when.rs  conformance.rs  coordination_conformance.rs  crdt_plane.rs  crdt_tree_laws.rs  decorator_factories.rs  durable_outbox.rs  familysync_conformance.rs  feedback_drain_bound.rs  ffi.rs  integration.rs  ipc.rs  lossless_tree_conformance.rs  lossless_tree_proptest.proptest-regressions  lossless_tree_proptest.rs  lossless_tree_schema.rs  materialization_async_conformance.rs  materialization_conformance.rs  materialization_threadsafe_conformance.rs  membership_conformance.rs  merge_conformance.rs  merge_execution_models.rs  merge_laws.rs  presence_conformance.rs  property_graph.rs  queue_conformance.rs  queue_demand_driven.rs  rateshape_conformance.rs  reactive_graph_conformance.rs  relay_core.rs  relay_examples.rs  relay_policy.rs  relay_roles.rs  (+24 more)
tests/reactive_graph/: engine.rs  model.rs  models.rs
