[package]
name = "lazily"
version = "0.12.2"
edition = "2024"
# let_chains is used throughout (context.rs, async_context.rs, state_machine.rs);
# it stabilized in Rust 1.88. Declare MSRV so cargo's resolver surfaces it.
rust-version = "1.88"
description = "Lazy reactive signals with dependency tracking and cache invalidation"
license = "MIT"
repository = "https://github.com/lazily-hub/lazily-rs"
keywords = ["reactive", "signals", "lazy", "dependency-tracking", "cache"]
categories = ["data-structures"]
# The signaling/ subtree is a standalone TypeScript Cloudflare Worker + client,
# not part of the Rust crate; keep it out of the published package.
exclude = ["signaling/"]

[lib]
crate-type = ["lib", "cdylib"]

[features]
async = ["dep:tokio"]
default = ["smallvec"]
distributed = []
ffi = ["ipc", "dep:serde_json"]
instrumentation = []
ipc = ["serde"]
ipc-binary = ["ipc", "dep:postcard"]
loom = []
serde = ["dep:serde", "smallvec?/serde"]
# #jpf1: WebRTC DataChannel IPC transport — abstraction layer (sync IpcSink/Source
# bridge + permission filtering + in-memory loopback). Dependency-light.
webrtc = ["ipc", "dep:serde_json"]
# #webrtcbackend: concrete sans-IO str0m DataChannel backend over the `webrtc`
# abstraction. Additive + opt-in so the str0m dep tree stays out of default builds.
webrtc-str0m = ["webrtc", "dep:str0m"]
# #akp3: concrete WebSocket DataChannel backend over the `webrtc` abstraction.
# WebSocket is ordered+reliable so it satisfies DataChannel directly via an
# async-to-sync tokio bridge — no signaling/ICE. Additive + opt-in.
websocket = ["webrtc", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
# Async client for the #yxjw Cloudflare signaling endpoint, so a Rust project
# (e.g. agent-doc) can depend on lazily-rs for distributed peer discovery (#s0fc).
signaling-client = ["distributed", "serde", "dep:serde_json", "dep:tokio", "dep:tokio-tungstenite", "dep:futures-util"]
std_sync_mutex = []
tokio = ["dep:tokio"]
vec_edges = []

[dependencies]
arc-swap = "1"
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink", "std"] }
parking_lot = "0.12"
postcard = { version = "1", optional = true, features = ["alloc"] }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
smallvec = { version = "1", optional = true }
str0m = { version = "0.20", optional = true }
tokio = { version = "1", optional = true, default-features = false, features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util"] }
tokio-tungstenite = { version = "0.24", optional = true, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
criterion = "0.8"
loom = "0.7"
proptest = "1"
serde_json = "1"

[[example]]
name = "tokio_sync"
required-features = ["tokio"]

[[example]]
name = "instrumentation_profile"
required-features = ["instrumentation"]

# #lzwebrtcrunbook: operator driver for the live two-host WebRTC e2e run (#h6qb).
# See tasks/software/runbook-lazily-webrtc-live-e2e.md.
[[example]]
name = "webrtc_live_e2e"
required-features = ["signaling-client", "webrtc-str0m"]

[[bench]]
name = "context"
harness = false

[[bench]]
name = "profile"
harness = false
required-features = ["instrumentation"]

[[bench]]
name = "async_context"
harness = false
required-features = ["async"]

[[bench]]
name = "webrtc_transport"
harness = false
required-features = ["webrtc"]

[[bench]]
name = "tokio_sync"
harness = false
required-features = ["tokio"]
