[package]
name = "lazily-macros"
version = "0.21.6"
edition = "2024"
rust-version = "1.88"
description = "Attribute macros for lazily reactive slot and cell factories"
license = "MIT"
repository = "https://github.com/lazily-hub/lazily-rs"
keywords = ["reactive", "signals", "lazy", "proc-macro"]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
